--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
 
   <!-- Pasek nawigacyjny (góra) -->
   <nav class="nav-bar">
-    <a href="https://majstered.github.io/strazopis.github.io/" class="nav-btn">📿 Różaniec</a>
-    <a href="https://majstered.github.io/odpady.github.io/" class="nav-btn">Nowenna</a>
-    <a href="https://majstered.github.io/yanopis.github.io/" class="nav-btn">🙏Różne Modlitwy Maryjne</a>
+    <a href="https://majstered.github.io/R/" class="nav-btn">📿 Różaniec</a>
+    <a href="https://majstered.github.io/N/" class="nav-btn">Nowenna</a>
+    <a href="https://majstered.github.io/Modlitwy/" class="nav-btn">🙏Różne Modlitwy Maryjne</a>
 
   </nav>
 
@@ -279,7 +279,6 @@ Wypowiadając „Zdrowaś Maryjo”, stajemy się uczestnikami tamtego spotkania
   <!-- Pasek nawigacyjny (dół) -->
   <nav class="nav-bar">
     <a href="index.html" class="nav-btn">🏠 Do góry</a>
-    <a href="kontakt.html" class="nav-btn">📬 Kontakt</a>
   </nav>
 
   <script>
