--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ Wypowiadając „Zdrowaś Maryjo”, stajemy się uczestnikami tamtego spotkania
 
   <!-- Pasek nawigacyjny (dół) -->
   <nav class="nav-bar">
-    <a href="index.html" class="nav-btn">🏠 Do góry</a>
+    <a href="https://majstered.github.io/M/" class="nav-btn">🏠 Do góry</a>
   </nav>
 
   <script>
