--- a/index.html
+++ b/index.html
@@ -155,15 +155,14 @@
 
   <main class="wrap">
 
-    <!-- Wprowadzenie -->
-    <section class="card" id="wprowadzenie">
-      <h2 class="section-title">Wielu ludzi zna na pamięć treść modlitwy „Zdrowaś Maryjo”. Wypowiada ją codziennie, czasem dziesiątki razy.
-          A jednak niewielu do końca przeczuwa jej głębię i <strong>niewyobrażalną moc</strong>, która płynie z jej treści.</h2>
-      <div class="prayer-box" aria-label="Wprowadzenie">
-        <p class="lead">
-        </p>
-      </div>
-    </section>
+<!-- Wprowadzenie -->
+<section class="card" id="wprowadzenie">
+  <h2 class="section-title">
+    Wielu ludzi zna na pamięć treść modlitwy „Zdrowaś Maryjo”. Wypowiada ją codziennie, czasem dziesiątki razy.
+    A jednak niewielu do końca przeczuwa jej głębię i <strong>niewyobrażalną moc</strong>, która płynie z jej treści.
+  </h2>
+</section>
+
 
     <!-- Zdrowaś – frazy -->
     <section class="card" id="fraza-1">
