--- a/index.html
+++ b/index.html
@@ -155,12 +155,11 @@
 
   <main class="wrap">
 
-<!-- Wprowadzenie -->
 <section class="card" id="wprowadzenie">
-  <h2 class="section-title">
-    Wielu ludzi zna na pamięć treść modlitwy „Zdrowaś Maryjo”. Wypowiada ją codziennie, czasem dziesiątki razy.
-    A jednak niewielu do końca przeczuwa jej głębię i <strong>niewyobrażalną moc</strong>, która płynie z jej treści.
-  </h2>
+  <p style="margin:0; font-size:clamp(19px,2.4vw,24px);">
+    Wielu ludzi zna na pamięć treść modlitwy „Zdrowaś Maryjo”. Wypowiada ją codziennie, czasem dziesiątki razy. 
+    A jednak niewielu do końca przeczuwa jej głębię i niewyobrażalną moc, która płynie z jej treści.
+  </p>
 </section>
 
 
